sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: ')' expected but 'while' found.
  while(ecart>0){
  ^